# go-fnb-backend

./: .gitignore  API_DOCS.md  Cargo.toml  googleauth.txt
docs/: backup.sql  go fnb backend-documentation.html  login.yml  opencollection.yml  pos_app.sql  register.yml  update.yml
docs/categories/: create category.yml  delete.yml  folder.yml  ge by id.yml  get by outlet.yml  update nama.yml
docs/invites/: create invite.yml  folder.yml  get invite.yml  post invite.yml
docs/outlets/: create outlet.yml  delete.yml  folder.yml  get by owner.yml  get me.yml  update outlet.yml
docs/qr_codes/: create qr code by table.yml  folder.yml  get by outlet.yml  get tables by qr.yml  scan qr.yml  select table after scan.yml
docs/tables/: create.yml  delete token.yml  folder.yml  update.yml
src/: main.rs
src/config/: database.rs
src/controllers/: auth_controller.rs  category_controller.rs  invite_controller.rs  mod.rs  order_controller.rs  outlet_controller.rs  product_controller.rs  qr_code_controller.rs  table_controller.rs
src/dto/: auth_dto.rs  category_dto.rs  invite_dto.rs  mod.rs  order_dto.rs  outlet_dto.rs  product_dto.rs  qr_code_dto.rs  qr_scan_dto.rs  table_dto.rs
src/middlewares/: auth_middleware.rs
src/models/: category_model.rs  invite_model.rs  mod.rs  oauth_model.rs  order_model.rs  outlet_model.rs  product_category_model.rs  product_model.rs  qr_code_model.rs  qr_code_table_model.rs  table_model.rs  user_auth_model.rs  user_model.rs
src/repositories/: category_repo.rs  invite_repo.rs  mod.rs  order_repo.rs  outlet_repo.rs  product_repo.rs  (+3 more)
(+24 files in other folders)
