[package]
name = "go-fnb-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "chrono",
    "runtime-tokio-rustls"
] }

uuid = { version = "1", features = ["v4", "serde"] }

dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

jsonwebtoken = "9"
bcrypt = "0.15"
chrono = "0.4"
actix-web-httpauth = "0.8.2"
thiserror = "2.0.18"

oauth2 = "4"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-actix-web = "0.7"